fix chrome url covering UI

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -163,9 +163,6 @@ aside {
     margin: 0 auto;
   }
 }
-.caption {
-  padding-top: 5px;
-}
 
 #controls {
   bottom: 0;
@@ -192,10 +189,6 @@ aside {
   border-right: 1px solid #ccc;
 }
 
-#statuses .control,
-#favories .control {
-  padding-top: 5px;
-}
 #statuses .icon,
 #favories .icon {
   width: 44px;
